objects/EFX__Efax_Batch_Monitor__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EFX__Batch_Triggered_Count__c</fullName>
        <label>Batch Triggered Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFX__Checked_State__c</fullName>
        <label>Checked State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Last_Triggered_Time__c</fullName>
        <label>Last Triggered Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFX__Mail_Sent_Time__c</fullName>
        <label>Mail Sent Time</label>
        <type>DateTime</type>
    </fields>
    <label>Efax Batch Monitor</label>
</CustomObject>